analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/callableReferenceQualifiedWithArgument.kt
class C {
    val lam = { "lam" }
}

fun foo() {
    C::lam(<expr>fun() {}</expr>)
}